# dilbert-bot

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: check.yaml  ci.yaml  deploy.yaml  on-push.yaml
src/: dilbert_search.rs  main.rs
src/dilbert/: cache.rs  mod.rs  search.rs  tags.rs
