[package]
name = "dilbert-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.9.0"
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
anyhow = "1.0.52"
url = "2.2.2"
reqwest = "0.11.8"
scraper = "0.12.0"